part2/y.output
State 53 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function program
    2        | /* empty */

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    4 function_2: statement SEMICOLON function_2
    5           | END_BODY

    6 decl_loop: declaration SEMICOLON decl_loop
    7          | /* empty */

    8 stmt_loop: statement SEMICOLON stmt_loop
    9          | /* empty */

   10 declaration: IDENT declaration_2

   11 declaration_2: COMMA IDENT declaration_2
   12              | COLON declaration_3 INTEGER

   13 declaration_3: /* empty */
   14              | ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF

   15 statement: statement_1
   16          | statement_2
   17          | statement_3
   18          | statement_4
   19          | statement_5
   20          | statement_6
   21          | CONTINUE
   22          | RETURN expression

   23 statement_1: var ASSIGN expression

   24 statement_2: IF bool_exp THEN statement_21 ENDIF

   25 statement_21: stmt_loop ELSE stmt_loop

   26 statement_3: WHILE bool_exp BEGINLOOP stmt_loop ENDLOOP

   27 statement_4: DO BEGINLOOP stmt_loop ENDLOOP WHILE bool_exp

   28 statement_5: READ var statement_51

   29 statement_51: COMMA var statement_51
   30             | /* empty */

   31 statement_6: WRITE var statement_61

   32 statement_61: COMMA var statement_6
   33             | /* empty */

   34 bool_exp: rel_and_exp bool_exp2

   35 bool_exp2: OR rel_and_exp bool_exp2
   36          | /* empty */

   37 rel_and_exp: relation_exp rel_and_exp2

   38 rel_and_exp2: AND relation_exp rel_and_exp2
   39             | /* empty */

   40 relation_exp: relation_exp_s
   41             | NOT relation_exp_s

   42 relation_exp_s: expression comp expression
   43               | TRUE
   44               | FALSE
   45               | L_PAREN bool_exp R_PAREN

   46 comp: EQ
   47     | NEQ
   48     | LT
   49     | GT
   50     | LTE
   51     | GTE

   52 expression: mult_expr expression_2

   53 expression_2: ADD mult_expr expression_2
   54             | SUB mult_expr expression_2
   55             | /* empty */

   56 mult_expr: term mult_expr_2

   57 mult_expr_2: MULT term mult_expr
   58            | DIV term mult_expr
   59            | MOD term mult_expr
   60            | /* empty */

   61 term: SUB term_2
   62     | term_2
   63     | term_3

   64 term_2: var
   65       | NUMBER
   66       | L_PAREN expression R_PAREN

   67 term_3: IDENT L_PAREN term_31 R_PAREN

   68 term_31: expression COMMA term_31
   69        | /* empty */

   70 var: IDENT var_2

   71 var_2: L_SQUARE_BRACKET expression R_SQUARE_BRACKET
   72      | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 3
BEGIN_PARAMS (259) 3
END_PARAMS (260) 3
BEGIN_LOCALS (261) 3
END_LOCALS (262) 3
BEGIN_BODY (263) 3
END_BODY (264) 5
INTEGER (265) 12
ARRAY (266) 14
OF (267) 14
IF (268) 24
THEN (269) 24
ENDIF (270) 24
ELSE (271) 25
WHILE (272) 26 27
DO (273) 27
BEGINLOOP (274) 26 27
ENDLOOP (275) 26 27
CONTINUE (276) 21
READ (277) 28
WRITE (278) 31
RETURN (279) 22
AND (280) 38
OR (281) 35
NOT (282) 41
TRUE (283) 43
FALSE (284) 44
SUB (285) 54 61
ADD (286) 53
MULT (287) 57
DIV (288) 58
MOD (289) 59
EQ (290) 46
NEQ (291) 47
LT (292) 48
GT (293) 49
LTE (294) 50
GTE (295) 51
SEMICOLON (296) 3 4 6 8
COLON (297) 12
COMMA (298) 11 29 32 68
L_PAREN (299) 45 66 67
R_PAREN (300) 45 66 67
L_SQUARE_BRACKET (301) 14 71
R_SQUARE_BRACKET (302) 14 71
ASSIGN (303) 23
NUMBER (304) 14 65
IDENT (305) 3 10 11 67 70


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0 1
function (53)
    on left: 3, on right: 1
function_2 (54)
    on left: 4 5, on right: 3 4
decl_loop (55)
    on left: 6 7, on right: 3 6
stmt_loop (56)
    on left: 8 9, on right: 8 25 26 27
declaration (57)
    on left: 10, on right: 6
declaration_2 (58)
    on left: 11 12, on right: 10 11
declaration_3 (59)
    on left: 13 14, on right: 12
statement (60)
    on left: 15 16 17 18 19 20 21 22, on right: 3 4 8
statement_1 (61)
    on left: 23, on right: 15
statement_2 (62)
    on left: 24, on right: 16
statement_21 (63)
    on left: 25, on right: 24
statement_3 (64)
    on left: 26, on right: 17
statement_4 (65)
    on left: 27, on right: 18
statement_5 (66)
    on left: 28, on right: 19
statement_51 (67)
    on left: 29 30, on right: 28 29
statement_6 (68)
    on left: 31, on right: 20 32
statement_61 (69)
    on left: 32 33, on right: 31
bool_exp (70)
    on left: 34, on right: 24 26 27 45
bool_exp2 (71)
    on left: 35 36, on right: 34 35
rel_and_exp (72)
    on left: 37, on right: 34 35
rel_and_exp2 (73)
    on left: 38 39, on right: 37 38
relation_exp (74)
    on left: 40 41, on right: 37 38
relation_exp_s (75)
    on left: 42 43 44 45, on right: 40 41
comp (76)
    on left: 46 47 48 49 50 51, on right: 42
expression (77)
    on left: 52, on right: 22 23 42 66 68 71
expression_2 (78)
    on left: 53 54 55, on right: 52 53 54
mult_expr (79)
    on left: 56, on right: 52 53 54 57 58 59
mult_expr_2 (80)
    on left: 57 58 59 60, on right: 56
term (81)
    on left: 61 62 63, on right: 56 57 58 59
term_2 (82)
    on left: 64 65 66, on right: 61 62
term_3 (83)
    on left: 67, on right: 63
term_31 (84)
    on left: 68 69, on right: 67 68
var (85)
    on left: 70, on right: 23 28 29 31 32 64
var_2 (86)
    on left: 71 72, on right: 70


state 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program   go to state 2
    function  go to state 3


state 1

    3 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    IDENT  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: function . program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program   go to state 6
    function  go to state 3


state 4

    3 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    SEMICOLON  shift, and go to state 7


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: function program .

    $default  reduce using rule 1 (program)


state 7

    3 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    BEGIN_PARAMS  shift, and go to state 8


state 8

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    IDENT  shift, and go to state 9

    $default  reduce using rule 7 (decl_loop)

    decl_loop    go to state 10
    declaration  go to state 11


state 9

   10 declaration: IDENT . declaration_2

    COLON  shift, and go to state 12
    COMMA  shift, and go to state 13

    declaration_2  go to state 14


state 10

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop . END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    END_PARAMS  shift, and go to state 15


state 11

    6 decl_loop: declaration . SEMICOLON decl_loop

    SEMICOLON  shift, and go to state 16


state 12

   12 declaration_2: COLON . declaration_3 INTEGER

    ARRAY  shift, and go to state 17

    $default  reduce using rule 13 (declaration_3)

    declaration_3  go to state 18


state 13

   11 declaration_2: COMMA . IDENT declaration_2

    IDENT  shift, and go to state 19


state 14

   10 declaration: IDENT declaration_2 .

    $default  reduce using rule 10 (declaration)


state 15

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS . BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    BEGIN_LOCALS  shift, and go to state 20


state 16

    6 decl_loop: declaration SEMICOLON . decl_loop

    IDENT  shift, and go to state 9

    $default  reduce using rule 7 (decl_loop)

    decl_loop    go to state 21
    declaration  go to state 11


state 17

   14 declaration_3: ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF

    L_SQUARE_BRACKET  shift, and go to state 22


state 18

   12 declaration_2: COLON declaration_3 . INTEGER

    INTEGER  shift, and go to state 23


state 19

   11 declaration_2: COMMA IDENT . declaration_2

    COLON  shift, and go to state 12
    COMMA  shift, and go to state 13

    declaration_2  go to state 24


state 20

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS . decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    IDENT  shift, and go to state 9

    $default  reduce using rule 7 (decl_loop)

    decl_loop    go to state 25
    declaration  go to state 11


state 21

    6 decl_loop: declaration SEMICOLON decl_loop .

    $default  reduce using rule 6 (decl_loop)


state 22

   14 declaration_3: ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF

    NUMBER  shift, and go to state 26


state 23

   12 declaration_2: COLON declaration_3 INTEGER .

    $default  reduce using rule 12 (declaration_2)


state 24

   11 declaration_2: COMMA IDENT declaration_2 .

    $default  reduce using rule 11 (declaration_2)


state 25

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop . END_LOCALS BEGIN_BODY statement SEMICOLON function_2

    END_LOCALS  shift, and go to state 27


state 26

   14 declaration_3: ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF

    R_SQUARE_BRACKET  shift, and go to state 28


state 27

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS . BEGIN_BODY statement SEMICOLON function_2

    BEGIN_BODY  shift, and go to state 29


state 28

   14 declaration_3: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF

    OF  shift, and go to state 30


state 29

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY . statement SEMICOLON function_2

    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    statement    go to state 39
    statement_1  go to state 40
    statement_2  go to state 41
    statement_3  go to state 42
    statement_4  go to state 43
    statement_5  go to state 44
    statement_6  go to state 45
    var          go to state 46


state 30

   14 declaration_3: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF .

    $default  reduce using rule 14 (declaration_3)


state 31

   24 statement_2: IF . bool_exp THEN statement_21 ENDIF

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    bool_exp        go to state 54
    rel_and_exp     go to state 55
    relation_exp    go to state 56
    relation_exp_s  go to state 57
    expression      go to state 58
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 32

   26 statement_3: WHILE . bool_exp BEGINLOOP stmt_loop ENDLOOP

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    bool_exp        go to state 64
    rel_and_exp     go to state 55
    relation_exp    go to state 56
    relation_exp_s  go to state 57
    expression      go to state 58
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 33

   27 statement_4: DO . BEGINLOOP stmt_loop ENDLOOP WHILE bool_exp

    BEGINLOOP  shift, and go to state 65


state 34

   21 statement: CONTINUE .

    $default  reduce using rule 21 (statement)


state 35

   28 statement_5: READ . var statement_51

    IDENT  shift, and go to state 38

    var  go to state 66


state 36

   31 statement_6: WRITE . var statement_61

    IDENT  shift, and go to state 38

    var  go to state 67


state 37

   22 statement: RETURN . expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    expression  go to state 69
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    var         go to state 63


state 38

   70 var: IDENT . var_2

    L_SQUARE_BRACKET  shift, and go to state 70

    $default  reduce using rule 72 (var_2)

    var_2  go to state 71


state 39

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement . SEMICOLON function_2

    SEMICOLON  shift, and go to state 72


state 40

   15 statement: statement_1 .

    $default  reduce using rule 15 (statement)


state 41

   16 statement: statement_2 .

    $default  reduce using rule 16 (statement)


state 42

   17 statement: statement_3 .

    $default  reduce using rule 17 (statement)


state 43

   18 statement: statement_4 .

    $default  reduce using rule 18 (statement)


state 44

   19 statement: statement_5 .

    $default  reduce using rule 19 (statement)


state 45

   20 statement: statement_6 .

    $default  reduce using rule 20 (statement)


state 46

   23 statement_1: var . ASSIGN expression

    ASSIGN  shift, and go to state 73


state 47

   41 relation_exp: NOT . relation_exp_s

    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    relation_exp_s  go to state 74
    expression      go to state 58
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 48

   43 relation_exp_s: TRUE .

    $default  reduce using rule 43 (relation_exp_s)


state 49

   44 relation_exp_s: FALSE .

    $default  reduce using rule 44 (relation_exp_s)


state 50

   61 term: SUB . term_2

    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 38

    term_2  go to state 75
    var     go to state 63


state 51

   45 relation_exp_s: L_PAREN . bool_exp R_PAREN
   66 term_2: L_PAREN . expression R_PAREN

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    bool_exp        go to state 76
    rel_and_exp     go to state 55
    relation_exp    go to state 56
    relation_exp_s  go to state 57
    expression      go to state 77
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 52

   65 term_2: NUMBER .

    $default  reduce using rule 65 (term_2)


state 53

   67 term_3: IDENT . L_PAREN term_31 R_PAREN
   70 var: IDENT . var_2

    L_PAREN           shift, and go to state 78
    L_SQUARE_BRACKET  shift, and go to state 70

    L_PAREN   [reduce using rule 72 (var_2)]
    $default  reduce using rule 72 (var_2)

    var_2  go to state 71


state 54

   24 statement_2: IF bool_exp . THEN statement_21 ENDIF

    THEN  shift, and go to state 79


state 55

   34 bool_exp: rel_and_exp . bool_exp2

    OR  shift, and go to state 80

    $default  reduce using rule 36 (bool_exp2)

    bool_exp2  go to state 81


state 56

   37 rel_and_exp: relation_exp . rel_and_exp2

    AND  shift, and go to state 82

    $default  reduce using rule 39 (rel_and_exp2)

    rel_and_exp2  go to state 83


state 57

   40 relation_exp: relation_exp_s .

    $default  reduce using rule 40 (relation_exp)


state 58

   42 relation_exp_s: expression . comp expression

    EQ   shift, and go to state 84
    NEQ  shift, and go to state 85
    LT   shift, and go to state 86
    GT   shift, and go to state 87
    LTE  shift, and go to state 88
    GTE  shift, and go to state 89

    comp  go to state 90


state 59

   52 expression: mult_expr . expression_2

    SUB  shift, and go to state 91
    ADD  shift, and go to state 92

    $default  reduce using rule 55 (expression_2)

    expression_2  go to state 93


state 60

   56 mult_expr: term . mult_expr_2

    MULT  shift, and go to state 94
    DIV   shift, and go to state 95
    MOD   shift, and go to state 96

    $default  reduce using rule 60 (mult_expr_2)

    mult_expr_2  go to state 97


state 61

   62 term: term_2 .

    $default  reduce using rule 62 (term)


state 62

   63 term: term_3 .

    $default  reduce using rule 63 (term)


state 63

   64 term_2: var .

    $default  reduce using rule 64 (term_2)


state 64

   26 statement_3: WHILE bool_exp . BEGINLOOP stmt_loop ENDLOOP

    BEGINLOOP  shift, and go to state 98


state 65

   27 statement_4: DO BEGINLOOP . stmt_loop ENDLOOP WHILE bool_exp

    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    $default  reduce using rule 9 (stmt_loop)

    stmt_loop    go to state 99
    statement    go to state 100
    statement_1  go to state 40
    statement_2  go to state 41
    statement_3  go to state 42
    statement_4  go to state 43
    statement_5  go to state 44
    statement_6  go to state 45
    var          go to state 46


state 66

   28 statement_5: READ var . statement_51

    COMMA  shift, and go to state 101

    $default  reduce using rule 30 (statement_51)

    statement_51  go to state 102


state 67

   31 statement_6: WRITE var . statement_61

    COMMA  shift, and go to state 103

    $default  reduce using rule 33 (statement_61)

    statement_61  go to state 104


state 68

   66 term_2: L_PAREN . expression R_PAREN

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    expression  go to state 105
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    var         go to state 63


state 69

   22 statement: RETURN expression .

    $default  reduce using rule 22 (statement)


state 70

   71 var_2: L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    expression  go to state 106
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    var         go to state 63


state 71

   70 var: IDENT var_2 .

    $default  reduce using rule 70 (var)


state 72

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON . function_2

    END_BODY  shift, and go to state 107
    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    function_2   go to state 108
    statement    go to state 109
    statement_1  go to state 40
    statement_2  go to state 41
    statement_3  go to state 42
    statement_4  go to state 43
    statement_5  go to state 44
    statement_6  go to state 45
    var          go to state 46


state 73

   23 statement_1: var ASSIGN . expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    expression  go to state 110
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    var         go to state 63


state 74

   41 relation_exp: NOT relation_exp_s .

    $default  reduce using rule 41 (relation_exp)


state 75

   61 term: SUB term_2 .

    $default  reduce using rule 61 (term)


state 76

   45 relation_exp_s: L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 111


state 77

   42 relation_exp_s: expression . comp expression
   66 term_2: L_PAREN expression . R_PAREN

    EQ       shift, and go to state 84
    NEQ      shift, and go to state 85
    LT       shift, and go to state 86
    GT       shift, and go to state 87
    LTE      shift, and go to state 88
    GTE      shift, and go to state 89
    R_PAREN  shift, and go to state 112

    comp  go to state 90


state 78

   67 term_3: IDENT L_PAREN . term_31 R_PAREN

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    $default  reduce using rule 69 (term_31)

    expression  go to state 113
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    term_31     go to state 114
    var         go to state 63


state 79

   24 statement_2: IF bool_exp THEN . statement_21 ENDIF

    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    $default  reduce using rule 9 (stmt_loop)

    stmt_loop     go to state 115
    statement     go to state 100
    statement_1   go to state 40
    statement_2   go to state 41
    statement_21  go to state 116
    statement_3   go to state 42
    statement_4   go to state 43
    statement_5   go to state 44
    statement_6   go to state 45
    var           go to state 46


state 80

   35 bool_exp2: OR . rel_and_exp bool_exp2

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    rel_and_exp     go to state 117
    relation_exp    go to state 56
    relation_exp_s  go to state 57
    expression      go to state 58
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 81

   34 bool_exp: rel_and_exp bool_exp2 .

    $default  reduce using rule 34 (bool_exp)


state 82

   38 rel_and_exp2: AND . relation_exp rel_and_exp2

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    relation_exp    go to state 118
    relation_exp_s  go to state 57
    expression      go to state 58
    mult_expr       go to state 59
    term            go to state 60
    term_2          go to state 61
    term_3          go to state 62
    var             go to state 63


state 83

   37 rel_and_exp: relation_exp rel_and_exp2 .

    $default  reduce using rule 37 (rel_and_exp)


state 84

   46 comp: EQ .

    $default  reduce using rule 46 (comp)


state 85

   47 comp: NEQ .

    $default  reduce using rule 47 (comp)


state 86

   48 comp: LT .

    $default  reduce using rule 48 (comp)


state 87

   49 comp: GT .

    $default  reduce using rule 49 (comp)


state 88

   50 comp: LTE .

    $default  reduce using rule 50 (comp)


state 89

   51 comp: GTE .

    $default  reduce using rule 51 (comp)


state 90

   42 relation_exp_s: expression comp . expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    expression  go to state 119
    mult_expr   go to state 59
    term        go to state 60
    term_2      go to state 61
    term_3      go to state 62
    var         go to state 63


state 91

   54 expression_2: SUB . mult_expr expression_2

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    mult_expr  go to state 120
    term       go to state 60
    term_2     go to state 61
    term_3     go to state 62
    var        go to state 63


state 92

   53 expression_2: ADD . mult_expr expression_2

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    mult_expr  go to state 121
    term       go to state 60
    term_2     go to state 61
    term_3     go to state 62
    var        go to state 63


state 93

   52 expression: mult_expr expression_2 .

    $default  reduce using rule 52 (expression)


state 94

   57 mult_expr_2: MULT . term mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    term    go to state 122
    term_2  go to state 61
    term_3  go to state 62
    var     go to state 63


state 95

   58 mult_expr_2: DIV . term mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    term    go to state 123
    term_2  go to state 61
    term_3  go to state 62
    var     go to state 63


state 96

   59 mult_expr_2: MOD . term mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    term    go to state 124
    term_2  go to state 61
    term_3  go to state 62
    var     go to state 63


state 97

   56 mult_expr: term mult_expr_2 .

    $default  reduce using rule 56 (mult_expr)


state 98

   26 statement_3: WHILE bool_exp BEGINLOOP . stmt_loop ENDLOOP

    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    $default  reduce using rule 9 (stmt_loop)

    stmt_loop    go to state 125
    statement    go to state 100
    statement_1  go to state 40
    statement_2  go to state 41
    statement_3  go to state 42
    statement_4  go to state 43
    statement_5  go to state 44
    statement_6  go to state 45
    var          go to state 46


state 99

   27 statement_4: DO BEGINLOOP stmt_loop . ENDLOOP WHILE bool_exp

    ENDLOOP  shift, and go to state 126


state 100

    8 stmt_loop: statement . SEMICOLON stmt_loop

    SEMICOLON  shift, and go to state 127


state 101

   29 statement_51: COMMA . var statement_51

    IDENT  shift, and go to state 38

    var  go to state 128


state 102

   28 statement_5: READ var statement_51 .

    $default  reduce using rule 28 (statement_5)


state 103

   32 statement_61: COMMA . var statement_6

    IDENT  shift, and go to state 38

    var  go to state 129


state 104

   31 statement_6: WRITE var statement_61 .

    $default  reduce using rule 31 (statement_6)


state 105

   66 term_2: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 112


state 106

   71 var_2: L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 130


state 107

    5 function_2: END_BODY .

    $default  reduce using rule 5 (function_2)


state 108

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS decl_loop END_PARAMS BEGIN_LOCALS decl_loop END_LOCALS BEGIN_BODY statement SEMICOLON function_2 .

    $default  reduce using rule 3 (function)


state 109

    4 function_2: statement . SEMICOLON function_2

    SEMICOLON  shift, and go to state 131


state 110

   23 statement_1: var ASSIGN expression .

    $default  reduce using rule 23 (statement_1)


state 111

   45 relation_exp_s: L_PAREN bool_exp R_PAREN .

    $default  reduce using rule 45 (relation_exp_s)


state 112

   66 term_2: L_PAREN expression R_PAREN .

    $default  reduce using rule 66 (term_2)


state 113

   68 term_31: expression . COMMA term_31

    COMMA  shift, and go to state 132


state 114

   67 term_3: IDENT L_PAREN term_31 . R_PAREN

    R_PAREN  shift, and go to state 133


state 115

   25 statement_21: stmt_loop . ELSE stmt_loop

    ELSE  shift, and go to state 134


state 116

   24 statement_2: IF bool_exp THEN statement_21 . ENDIF

    ENDIF  shift, and go to state 135


state 117

   35 bool_exp2: OR rel_and_exp . bool_exp2

    OR  shift, and go to state 80

    $default  reduce using rule 36 (bool_exp2)

    bool_exp2  go to state 136


state 118

   38 rel_and_exp2: AND relation_exp . rel_and_exp2

    AND  shift, and go to state 82

    $default  reduce using rule 39 (rel_and_exp2)

    rel_and_exp2  go to state 137


state 119

   42 relation_exp_s: expression comp expression .

    $default  reduce using rule 42 (relation_exp_s)


state 120

   54 expression_2: SUB mult_expr . expression_2

    SUB  shift, and go to state 91
    ADD  shift, and go to state 92

    $default  reduce using rule 55 (expression_2)

    expression_2  go to state 138


state 121

   53 expression_2: ADD mult_expr . expression_2

    SUB  shift, and go to state 91
    ADD  shift, and go to state 92

    $default  reduce using rule 55 (expression_2)

    expression_2  go to state 139


state 122

   57 mult_expr_2: MULT term . mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    mult_expr  go to state 140
    term       go to state 60
    term_2     go to state 61
    term_3     go to state 62
    var        go to state 63


state 123

   58 mult_expr_2: DIV term . mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    mult_expr  go to state 141
    term       go to state 60
    term_2     go to state 61
    term_3     go to state 62
    var        go to state 63


state 124

   59 mult_expr_2: MOD term . mult_expr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 68
    NUMBER   shift, and go to state 52
    IDENT    shift, and go to state 53

    mult_expr  go to state 142
    term       go to state 60
    term_2     go to state 61
    term_3     go to state 62
    var        go to state 63


state 125

   26 statement_3: WHILE bool_exp BEGINLOOP stmt_loop . ENDLOOP

    ENDLOOP  shift, and go to state 143


state 126

   27 statement_4: DO BEGINLOOP stmt_loop ENDLOOP . WHILE bool_exp

    WHILE  shift, and go to state 144


state 127

    8 stmt_loop: statement SEMICOLON . stmt_loop

    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 38

    $default  reduce using rule 9 (stmt_loop)

    stmt_loop    go to state 145
    statement    go to state 100
    statement_1  go to state 40
    statement_2  go to state 41
    statement_3  go to state 42
    statement_4  go to state 43
    statement_5  go to state 44
    statement_6  go to state 45
    var          go to state 46


state 128

   29 statement_51: COMMA var . statement_51

    COMMA  shift, and go to state 101

    $default  reduce using rule 30 (statement_51)

    statement_51  go to state 146


state 129

   32 statement_61: COMMA var . statement_6

    WRITE  shift, and go to state 36

    statement_6  go to state 147


state 130

   71 var_2: L_SQUARE_BRACKET expression R_SQUARE_BRACKET .
